[package]
name = "iced-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version = "0.13.1", features = ["tokio", "advanced", "highlighter"]}
iced_highlighter = "0.13.0"
tokio = {version = "1.44.1", features = ["fs", "rt"]}
rfd = {version = "0.15", features = []}
smol_str = "0.2.2"
